# auth_fastapi_google

./: .gitignore  main.py  pyproject.toml
backend/: env_template.txt  main.py  pyproject.toml
backend/auth/dtos/: __init__.py  general_dto.py  user_dto.py
backend/auth/factory/: __init__.py  log_factory.py  user_factory.py
backend/auth/middleware/: middleware.py
backend/auth/models/: __init__.py  log_model.py  user_model.py
backend/auth/repository/: __init__.py  log_repository.py  user_repository.py
backend/auth/routers/: auth.py  user.py
backend/auth/services/: __init__.py  auth_service.py  log_service.py  user_service.py
backend/auth/utils/: __init__.py  decorators.py  managers.py  messages.py
backend/config/: __init__.py  config.py  db.py
backend/dtos/: general_dto.py
backend/dtos/auth/: user_dto.py
backend/factory/auth/: user_factory.py
backend/models/: user_model.py
backend/models/auth/: user_model.py
backend/repository/auth/: user_repository.py
backend/routers/auth/: auth.py  user.py
backend/services/auth/: user_service.py
backend/utils/: auth.py  decorators.py  timezone_utils.py
backend/utils/messages/: auth.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/api/: index.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: QueryProvider.tsx
frontend/src/types/: index.ts
