[project]
name = "auth-fastapi-google"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.116.1",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]
